--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+    <link rel="stylesheet" href="./styles.css">        
     <title>Toggle Password Visibility</title>
 </head>
 <body>
@@ -16,7 +18,7 @@
             <p>
                 <label>Password:</label>
                 <input id="password" type="password" class="password">
-                <i class="bi bi-eye-slash" id="toggle-password">click me</i>
+                <i class="bi bi-eye-slash" id="toggle-password"></i>
             </p>
             <button type="submit">Log In</button>
         </form>
