--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="container">
         <h2>Sign In</h2>
         <form method="post">
-            <p>
+            <p class="username">
                 <label>Username:</label>
                 <input type="text">
             </p>
-            <p>
+            <p class="password">
                 <label>Password:</label>
-                <input id="password" type="password" class="password">
+                <input id="password" type="password">
                 <i class="bi-eye-slash" id="toggle-password"></i>
             </p>
             <button type="submit">Log In</button>
